--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "autoprefixer": "^10.4.17",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
